# mlir-arx

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_ARX.md  setup.sh  update_github_to_gitlab.sh
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile  Dockerfile.onnx-mlir  Dockerfile.onnx-mlir-dev  Dockerfile.onnx-mlir-part  Dockerfile.onnx-mlir-part-sdk  build-in-container.sh  run-container.sh  run-tests.sh
examples/: CMakeLists.txt
examples/imagenet/: CMakeLists.txt
examples/imagenet/mnasnet_partition/: CMakeLists.txt  PartitionPlan.yaml  input.h  main.cpp
examples/imagenet/resnet18/: CMakeLists.txt  input.h  main.cpp
examples/imagenet/resnet18_partition/: CMakeLists.txt  PartitionPlan.yaml  main.cpp
examples/imagenet/resnet50_partition/: CMakeLists.txt  PartitionPlan.yaml  input.h  main.cpp
examples/imagenet/squeezenet_partition/: CMakeLists.txt  PartitionPlan.yaml  input.h  main.cpp
examples/lm/: CMakeLists.txt
examples/lm/bertsquad_partition/: CMakeLists.txt  PartitionPlan.yaml  main.cpp
examples/lm/gpt2_partition/: CMakeLists.txt  PartitionPlan.yaml  main.cpp
examples/lm/robert_partition/: CMakeLists.txt  PartitionPlan.yaml  main.cpp
examples/lm/t5encoder_partition/: CMakeLists.txt  main.cpp
examples/mnist/: CMakeLists.txt  main.cpp  mnist
examples/object_dection/: CMakeLists.txt
examples/object_dection/yolo3_neubla_partition/: CMakeLists.txt  PartitionPlan.yaml  input.h  main.cpp
examples/partition/: DeviceConfig.yaml  PartitionPlan.yaml
onnx-mlir-translate/: CompilerOptions.cpp  README_Translate.md
onnx-mlir-translate/src/: CMakeLists.txt  onnx-mlir-translate.cpp
onnx-mlir-translate/src/Python/: CMakeLists.txt  TranslateRegistration.cpp  TranslateToPython.cpp
src/: CMakeLists.txt  onnx-mlir-part.cpp
src/Accelerators/: Accelerator.hpp
src/Accelerators/ARX/: ARXAccelerator.cpp  ARXAccelerator.hpp  CMakeLists.txt
src/Accelerators/ARX/Compiler/: ARXCompilerOptions.cpp  ARXCompilerOptions.hpp  ARXCompilerUtils.cpp  ARXCompilerUtils.hpp  CMakeLists.txt
src/Accelerators/ARX/Conversion/: CMakeLists.txt
src/Accelerators/ARX/Conversion/HARXToLLVM/: CMakeLists.txt  HARXToLLVM.cpp  HARXToLLVM.hpp  HARXToLLVMCommon.cpp  HARXToLLVMCommon.hpp  HARXToLLVMPass.cpp
src/Accelerators/ARX/Conversion/HARXToLLVM/pass/: ConstantToEmitC.cpp  ConvolutionShiftToEmitC.cpp  DequantizeToEmitC.cpp  EmitSetup.cpp  FullyConnectedToEmitC.cpp  HarxToEmitC.h  MaxPoolToEmitC.cpp  QuantizeToEmitC.cpp  ReShapeToEmitC.cpp  RewriteHarx.cpp
src/Accelerators/ARX/Conversion/ONNXToHARX/: CMakeLists.txt  DevicePlacement.cpp  DevicePlacementHeuristic.cpp  DevicePlacementHeuristic.hpp  HARXToONNX.cpp  HARXToONNX.td  HARXTypeConverter.hpp  ONNXLegalityCheck.cpp  ONNXLegalityCheck.hpp  ONNXToHARX.cpp  ONNXToHARX.hpp  ONNXToHARX.td  ONNXToHARXCommon.cpp  ONNXToHARXCommon.hpp  ONNXToHARXCommon.td  ONNXToHARXPass.cpp  PerfModel.cpp  PerfModel.hpp  PerfModel.inc  RewriteONNXForHARX.cpp  RewriteONNXForHARX.hpp  RewriteONNXForHARX.td
src/Accelerators/ARX/Conversion/ONNXToHARX/pass/: EraseOnnx.cpp  OnnxToHarxPass.h  RewriteOnnx.cpp
src/Accelerators/ARX/Conversion/ZHighToZLow/: ZHighToZLow.cpp  ZHighToZLow.hpp
src/Accelerators/ARX/Dialect/: CMakeLists.txt
src/Accelerators/ARX/Dialect/HARX/: CMakeLists.txt  HARX.td  HARXOps.cpp  HARXOps.hpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/: CMakeLists.txt  OpHelper.cpp  OpHelper.hpp  OpHelper.td  ShapeHelper.hpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/Conv2D/: Conv2D.cpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/Elementwise/: Elementwise.cpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/MatMul/: MatMul.cpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/Pooling/: Pooling.cpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/Softmax/: Softmax.cpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/Stick/: CMakeLists.txt  HARXStick.td  Stick.cpp
src/Accelerators/ARX/Dialect/HARX/HARXOps/Unstick/: CMakeLists.txt  HARXUnstick.td  Unstick.cpp
src/Accelerators/ARX/Dialect/LARX/: CMakeLists.txt  DialectBuilder.cpp  DialectBuilder.hpp  LARX.td  LARXCombine.cpp  LARXCombine.td  LARXOps.cpp  LARXOps.hpp
src/Accelerators/ARX/Pass/: ARXPasses.hpp
src/Accelerators/ARX/Support/: ARXLimit.cpp  ARXLimit.hpp  CMakeLists.txt  LayoutHelper.cpp  LayoutHelper.hpp
src/Builder/: CMakeLists.txt  FrontendDialectTransformer.cpp  FrontendDialectTransformer.hpp  ImportONNXUtils.cpp  Partition.cpp  Partition.hpp
src/Compiler/: CMakeLists.txt  CompilerOptions.cpp  CompilerOptions.hpp  CompilerPasses.cpp  CompilerUtils.cpp  CompilerUtils.hpp
src/Conversion/KrnlToLLVM/: ConvertKrnlToLLVM.cpp  KrnlEntryPoint.cpp
src/Conversion/ONNXToKrnl/: ConvertONNXToKrnl.cpp
src/Dialect/Mlir/: IndexExpr.cpp  IndexExprDetail.cpp
src/Dialect/ONNX/: ONNXDialect.cpp
src/Runtime/: ExecutionSession.cpp
src/Version/: AddLLVMVersionHeader.cmake  CMakeLists.txt
src/templates/: CMakeLists.txt  main.cpp
src/templates/imagenet_sp/: CMakeLists.txt  input.h  main.cpp
src/templates/mnist_sp/: CMakeLists.txt  input.h  main.cpp
test/accelerators/ARX/: CMakeLists.txt
test/accelerators/ARX/backend/: CMakeLists.txt
test/mlir-arx/: code_to_arx.py  run.py
test/mlir-arx/code/: mnist_onnx.h  mnist_onnx.hpp
test/mlir-arx/emitc/: harx2emitc_main.mlir  onnx_to_emitc.mlir
test/mlir-arx/harx/: harx2emitc_main.mlir  mnist-12-int8.onnx.mlir  onnx_to_arx.mlir  quant_add_dequant.mlir  uint_model_1x10x10.mlir
test/mlir-arx/mlir/: mnist-12-int8.onnx.mlir  onnx_to_mlir.mlir  quant_add_dequant.mlir  uint_model_1x10x10.mlir
test/mlir-arx/test_code/: CMakeLists.txt  main.cpp  test_mnist.py
test/unit/CustomFn/: TestCustomFn.cpp
utils/cppcheck_scan/: cppcheck-scan.py
